Try to fix the bar again.  Jumping too early

--- a/trentStyle.css
+++ b/trentStyle.css
@@ -45,7 +45,7 @@ background-color: gray;
 }
 
 .sticky + .content{
-   padding-top: 80px;
+   padding-top: 70px;
 }
 
 h1{ 
